maybe this will fix weird about page issues on mobile safari

--- a/_stylesheets/lite.css
+++ b/_stylesheets/lite.css
@@ -4,6 +4,7 @@
 BODY {
   color: white;
   background-color: #5f4f43;
+  max-width: 100vw;
 }
 
 a {
